[gd_scene load_steps=3 format=3 uid="uid://g4j2m6p8n1s5c"]

[ext_resource type="Script" uid="uid://x7c2v9b5m1t4n" path="res://scripts/ui/settings_panel.gd" id="1_settings_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.09, 0.85)
border_width_all = 2
border_color = Color(0.55, 0.45, 0.35, 0.9)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_left = 14
corner_radius_bottom_right = 14
content_margin_left = 24
content_margin_top = 20
content_margin_right = 24
content_margin_bottom = 20

[node name="SettingsPanel" type="PanelContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -320.0
offset_right = 460.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_settings_script")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
separation = 14

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Настройки"
horizontal_alignment = 1

[node name="Content" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
separation = 10

[node name="SoundTitle" type="Label" parent="VBox/Content"]
layout_mode = 2
text = "Звук"

[node name="MasterRow" type="HBoxContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterLabel" type="Label" parent="VBox/Content/MasterRow"]
layout_mode = 2
text = "Общая громкость"
size_flags_horizontal = 3

[node name="MasterSlider" type="HSlider" parent="VBox/Content/MasterRow"]
layout_mode = 2
min_value = -80.0
max_value = 0.0
step = 0.5
value = -6.0
size_flags_horizontal = 3
focus_mode = 2

[node name="MusicRow" type="HBoxContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicLabel" type="Label" parent="VBox/Content/MusicRow"]
layout_mode = 2
text = "Музыка"
size_flags_horizontal = 3

[node name="MusicSlider" type="HSlider" parent="VBox/Content/MusicRow"]
layout_mode = 2
min_value = -80.0
max_value = 0.0
step = 0.5
value = -10.0
size_flags_horizontal = 3
focus_mode = 2

[node name="SfxRow" type="HBoxContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SfxLabel" type="Label" parent="VBox/Content/SfxRow"]
layout_mode = 2
text = "Эффекты"
size_flags_horizontal = 3

[node name="SfxSlider" type="HSlider" parent="VBox/Content/SfxRow"]
layout_mode = 2
min_value = -80.0
max_value = 0.0
step = 0.5
value = -8.0
size_flags_horizontal = 3
focus_mode = 2

[node name="GraphicsTitle" type="Label" parent="VBox/Content"]
layout_mode = 2
text = "Графика"

[node name="FullscreenCheck" type="CheckBox" parent="VBox/Content"]
layout_mode = 2
text = "Полноэкранный режим"
focus_mode = 2

[node name="VsyncCheck" type="CheckBox" parent="VBox/Content"]
layout_mode = 2
text = "Вертикальная синхронизация"
focus_mode = 2

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="VBox" groups=["menu_button"]]
layout_mode = 2
text = "Назад"
size_flags_horizontal = 4
focus_mode = 2
